--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongodb-session": "^3.1.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3"
   },
